--- a/src/examples/ODataQuery/ODataQuery.csproj
+++ b/src/examples/ODataQuery/ODataQuery.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -7,8 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Endor.TinyServices.OData" Version="1.0.3" />
-    <PackageReference Include="Endor.TinyServices.OData.Sql" Version="1.0.0" />
+    <PackageReference Include="Endor.TinyServices.OData" Version="1.2.0" />
+    <PackageReference Include="Endor.TinyServices.OData.Sql" Version="1.2.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
